# 17eyes

./: .gitignore  17eyes.cabal  CNAME  LICENSE  Makefile  README  index.html  phpsa.cabal
bare_strings/: good_hard.php
css/: style.css
lossy_coercion/: warn_boolean.php
src/: CharAnalysis.hs  Codebase.hs  Common.hs  Issue.hs  Kinds.hs  Main.hs  Pipeline.hs  SQLUtils.hs
src/Data/: Intercal.hs
src/Lang/: Php.hs
tests/: Makefile  README  example.hutest
tests/CharAnalysis/: lineLengthCheck.hutest  tabsVsSpaces01.hutest  tabsVsSpaces02.hutest
tests/ast-analysis/: SwitchFallthrough.hutest  UnreachableCode.hutest
tests/bare_strings/: good.php  warn.php  warn_ugly.php
tests/code_execution/: crap7.php
tests/colons/: for.php  foreach.php  if-else.php  if-elseif.php  if.php  switch.php  while.php
tests/control_flow/: to_include.inc  warn_fcall.php  warn_fcall2.php  warn_fcall_deep.php  warn_include.php  warn_include_harder.php  warn_object_simple.php
tests/crap/: crap1.php  crap3.php  crap6.php
tests/eof_junk/: good.php  warn.php
tests/file_inclusion/: fileinc.php  fileinc2.php  fileinc3.php  fileinc4.php  fileinc5.php  fileinc6.php  fileinc7.php
tests/lossy_coercion/: good_boolean.php  good_string.php  warn_float.php  warn_string.php
tests/open_redirect/: ored.php
tests/parser/: 002.phpt  003.phpt  005_variation-win32.phpt  007_basic.phpt  007_variation1.phpt  007_variation10.phpt  007_variation11-win32.phpt  007_variation11.phpt  007_variation12-win32.phpt  007_variation12.phpt  007_variation13-win32.phpt  (+1607 more)
tools/: TestHelper.hs  hutest2hs
(+68 files in other folders)
