name:           17eyes
version:        0.1
build-type:     Simple
cabal-version:  >= 1.6

executable 17eyes
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  HSH >= 2, MissingH, base >= 4, binary, bytestring,
                  containers, derive, directory, filepath, mtl, parsec == 3.*,
                  process, syb, hoopl, HDBC, HDBC-sqlite3, cryptohash
  ghc-options:    -threaded -O2 -fspec-constr-count=32 -rtsopts
                  -with-rtsopts=-K64M 
